namespaces/services/auth/ingress/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.liberte.top
      secretName: auth-tls
  rules:
    - host: auth.liberte.top
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-web
                port:
                  number: 80
